fixed log out button text wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ nav {
 
 #nav_links_area a {
   margin-right: 10%;
+  white-space: nowrap;
 }
 
 #left_side {
